<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpisDrinka"
    android:background="@drawable/gradientbg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nazwa"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/skladniki"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Opis"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/opis"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Wykonanie"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/instrukcja"
                android:textSize="20sp"

                />
            <TextView
                android:id="@+id/text_dodawanie_nowego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/DodajNowyDrink"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/dodawanie_but"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="Dodawanie "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/text_kalkulator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/PoliczycPromile"
                android:textSize="21sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/kalkulator_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="92dp"
                android:text="Kalkulator promili"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                 />




        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>